# misskey-emojibot-r

./: .gitignore  Cargo.toml  LICENSE  README.md
.example/: .env  .env.debug  emojibot.toml
src/: debug.rs  emojibot.rs  init_logger.rs  main.rs  misskey_api.rs  util.rs
src/api/: misskey_api.rs
src/debug/: debug_misskey_api.rs  debug_toml.rs
src/emojibot/: config.rs  run.rs
src/misskey_api/: demo.rs  endpoint.rs  model.rs
src/misskey_api/endpoint/: admin.rs  api_target.rs  i.rs  notes.rs  request.rs  users.rs
src/misskey_api/endpoint/admin/: show_moderation_logs.rs
src/misskey_api/endpoint/i/: i.rs
src/misskey_api/endpoint/notes/: create.rs  reaction_acceptance.rs  show.rs  visibility.rs
src/misskey_api/endpoint/users/: show.rs
src/misskey_api/model/: avator_decoration.rs  created_note.rs  custom_emoji.rs  file.rs  moderation_log.rs  moderation_type.rs  note.rs  user.rs
src/util/: env.rs  get_env.rs  logger.rs  toml.rs
