[package]
name = "misskey-emojibot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
dotenv = { version = "0.15.0"}
env_logger =  { version = "0.11.3", features = ["color"] }
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
